# CFD-dataset

./: .gitignore  .gitmodules  README.md  REFACTORING_SUMMARY.md  coords.csv  environment.yml  generateInputs.py  grid_independence_test.ipynb  input_generation_dashboard.ipynb  parallelisation_benchmark.ipynb  pipeline_dashboard.ipynb  pipeline_monitor.ipynb  terrain_config.yaml
ABL_BC_generator/: __init__.py  config.py  generateBCs.py  pyproject.toml  requirements.txt
ABL_BC_generator/BCtemplates/: epsilon  nut
GenerateInput/: __init__.py  dem_downloader.py  download_config.py
GenerateInputs/: .gitignore  config.py  coords.csv  generateInputs.py
GenerateInputs/dem_download/: csv_utils.py  dem_downloader.py  download_config.py
GenerateInputs/dem_processing/: __init__.py  csv_utils.py  debug_utils.py  dem_processor.py  meta_data_process.py  process_config.py  randomDirections.py  terrain_smoothing.py
benchmarking/: parallelisation_benchmark.ipynb
configs/: abl_bc_config.yaml  taskmanager_config.yaml  terrain_config.yaml  terrain_fetcher_config.yaml
configs/openfoam_template/: Allrun  residualPlot.py
configs/openfoam_template/0/: U  k  p
configs/openfoam_template/0/include/: initialConditions
configs/openfoam_template/constant/: transportProperties  turbulenceProperties
configs/openfoam_template/system/: constantsDict  fvSchemes  fvSchemes_2  fvSolution.j2
dem_processing/: __init__.py  debug_utils.py  dem_processor_original.py  geo_utils.py  meta_data_process.py  process_config.py
docs/: benchmarking.md  output_structure.md  setup.md  usage.md
fetchData/: __init__.py  download_config.py  download_raster.py  metadata_utils.py  reproject_raster.py
taskManager/: __init__.py  pyproject.toml
terrain_following_mesh_generator/: __init__.py  pyproject.toml
