[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfd-task-manager"
version = "1.0.0"
description = "OpenFOAM case manager and HPC job scheduler"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jinja2>=3.0",
]

[tool.setuptools]
packages = ["taskManager"]
package-dir = {"taskManager" = "."}

[tool.setuptools.package-data]
taskManager = ["template/**/*"]
