[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terrain-following-mesh-generator"
version = "1.0.0"
description = "Terrain-following mesh generator for CFD/OpenFOAM simulations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "rasterio>=1.2.0",
    "pyproj>=3.0.0",
    "xarray>=0.19.0",
    "pyvista>=0.32.0",
    "matplotlib>=3.4.0",
    "scikit-image>=0.18.0",
    "pyyaml>=5.4.0",
]

[tool.setuptools]
packages = ["terrain_following_mesh_generator", "terrain_following_mesh_generator.terrain_mesh"]
package-dir = {"terrain_following_mesh_generator" = "."}
